--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,6 @@ cabal.sandbox.config
 cabal.project.local
 cabal.project.local~
 .HTF/
-.ghc.environment.*
+.ghc.environment.*result*
+*.sw?
+result
