feat(oauth): typeclass-based OAuth state and authentication architecture (#1)
* docs(spec): add effect patterns terminology guide

Clarify three-layer cake, MTL-style, classy-MTL, and ReaderT IO patterns
used in OAuth auth typeclasses design. Add references to authoritative sources.

This provides context for developers implementing the feature.

* docs(spec): refine OAuth typeclass design contracts and add property-based testing patterns

- Add design contract disclaimers to AuthBackend.hs and OAuthStateStore.hs
- Clarify that type signatures and interfaces are illustrative pseudo-code
- Update quickstart testing patterns with property-based testing examples
- Separate polymorphic law tests from known credential verification tests
- Create feature epic (mcp-nyr) with 15 implementation tasks
- Add research note clarifying pseudo-code nature of design contracts
- Track OAuth consent screen as discovered feature (mcp-8rd)

* chore(deps): add generic-lens and property testing deps

Library:
- generic-lens >=2.2 for AsType/HasType lens support
- network-uri >=2.6 for URI validation

Test suite:
- QuickCheck >=2.14 for property-based testing
- quickcheck-instances >=0.3 for Arbitrary instances

* feat(oauth): add MonadTime re-export via monad-time package

Add time abstraction for testable time-dependent operations
in OAuth flows (token expiry, session timeouts).

- Add monad-time ^>=0.4 dependency
- Create MCP.Server.Time module re-exporting MonadTime typeclass
- Enables deterministic testing of expiry behavior

* feat(oauth): add OAuth domain types module

Add src/MCP/Server/OAuth/Types.hs with foundational types:
- Identity newtypes: AuthCodeId, ClientId, SessionId, UserId, etc.
- Value newtypes: RedirectUri, Scope, CodeChallenge with validation
- ADTs: CodeChallengeMethod, GrantType, ResponseType, ClientAuthMethod
- Domain entities: AuthorizationCode, ClientInfo, PendingAuthorization

Smart constructors validate inputs and return Maybe for failures.
All types include

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,8 @@ cabal.project.local~
 .ghc.environment.*result*
 *.sw?
 result
+bug-analyses
+core-reviews
+cabal.project.freeze
+code-reviews
+*.log
