--- a/mcp.cabal
+++ b/mcp.cabal
@@ -50,13 +50,13 @@ license:            MIT
 license-file:       LICENSE
 
 -- The package author(s).
-author:             Matthias Pall Gissurarson
+author:             Matthias Pall Gissurarson, PakSCADA LLC
 
 -- An email address to which users can send suggestions, bug reports, and patches.
-maintainer:         mpg@mpg.is
+maintainer:         mpg@mpg.is, alberto.valverde@pakenergy.com
 
 -- A copyright notice.
--- copyright:
+copyright:          (C) 2025 Matthias Pall Gissurarson, PakSCADA LLC
 category:           Network
 build-type:         Simple
 
@@ -78,7 +78,7 @@ source-repository head
   location: https://github.com/Tritlo/mcp.git
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wredundant-constraints -Wunused-packages -Werror -Wincomplete-uni-patterns -Wincomplete-record-updates
 
 library
     -- Import common warning flags.
@@ -91,7 +91,27 @@ library
         MCP.Server
         MCP.Server.StdIO
         MCP.Server.HTTP
+        MCP.Server.HTTP.AppEnv
         MCP.Server.Auth
+        MCP.Server.Time
+        Servant.OAuth2.IDP.API
+        Servant.OAuth2.IDP.Types
+        Servant.OAuth2.IDP.Store
+        Servant.OAuth2.IDP.Store.InMemory
+        Servant.OAuth2.IDP.Boundary
+        Servant.OAuth2.IDP.Server
+        Servant.OAuth2.IDP.Handlers
+        Servant.OAuth2.IDP.Handlers.HTML
+        Servant.OAuth2.IDP.Handlers.Helpers
+        Servant.OAuth2.IDP.Handlers.Metadata
+        Servant.OAuth2.IDP.LoginFlowError
+        Servant.OAuth2.IDP.Handlers.Registration
+        Servant.OAuth2.IDP.Handlers.Authorization
+        Servant.OAuth2.IDP.Handlers.Login
+        Servant.OAuth2.IDP.Handlers.Token
+        Servant.OAuth2.IDP.Test.Internal
+        Servant.OAuth2.IDP.Auth.Backend
+        Servant.OAuth2.IDP.Auth.Demo
         MCP.Trace.Types
         MCP.Trace.HTTP
         MCP.Trace.OAuth
@@ -113,11 +133,8 @@ library
         text >= 2.0 && <= 2.1.2,
         containers >= 0.6 && < 0.7,
         bytestring >= 0.11 && < 0.12,
-        unordered-containers >= 0.2 && < 0.3,
         stm >= 2.5 && < 2.6,
-        async >= 2.2 && < 2.3,
         mtl >= 2.3 && < 2.4,
-        transformers >= 0.6 && < 0.7,
         warp >= 3.3 && < 3.4,
         wai >= 3.2 && < 3.3,
         wai-extra >= 3.1 && < 3.2,
@@ -126,20 +143,22 @@ library
         http-types >= 0.12 && < 0.13,
         http-media >= 0.8 && < 0.9,
         http-api-data >= 0.6 && < 0.7,
-        servant-auth >= 0.4 && < 0.5,
         servant-auth-server >= 0.4 && < 0.5,
         jose >= 0.10 && < 0.12,
-        cryptonite >= 0.30 && < 0.31,
+        crypton >= 0.34 && < 2.0,
         memory >= 0.18 && < 0.19,
         base64-bytestring >= 1.2 && < 1.3,
-        http-conduit >= 2.3 && < 2.4,
-        random >= 1.2 && < 1.3,
         time >= 1.12 && < 1.13,
         uuid >= 1.3 && < 1.4,
         data-default >= 0.7 && < 0.8,
         plow-log ^>= 0.1.6,
-        plow-log-async ^>= 0.1.4,
-        unliftio-core >= 0.2 && < 0.3
+        generic-lens >= 2.2 && < 2.3,
+        network-uri >= 2.6 && < 2.7,
+        monad-time >= 0.4 && < 0.5,
+        hspec >= 2.10 && < 2.12,
+        hspec-wai >= 0.11 && < 0.12,
+        lucid >= 2.11 && < 2.12,
+        servant-lucid >= 0.9 && < 0.10
 
     -- Directories containing source files.
     hs-source-dirs:   src
@@ -164,12 +183,8 @@ executable mcp
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
-        aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
-        containers >= 0.6 && < 0.7,
-        scientific >= 0.3 && < 0.4,
         time >= 1.12 && < 1.13,
-        data-default >= 0.7 && < 0.8,
         plow-log ^>= 0.1.6,
         plow-log-async ^>= 0.1.4
 
@@ -197,15 +212,14 @@ executable mcp-http
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
-        aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
-        containers >= 0.6 && < 0.7,
-        scientific >= 0.3 && < 0.4,
         time >= 1.12 && < 1.13,
         optparse-applicative >= 0.17 && < 0.19,
-        data-default >= 0.7 && < 0.8,
         plow-log ^>= 0.1.6,
-        plow-log-async ^>= 0.1.4
+        plow-log-async ^>= 0.1.4,
+        warp >= 3.3 && < 3.4,
+        servant-auth-server >= 0.4 && < 0.5,
+        stm >= 2.5 && < 2.6
 
     -- Directories containing source files.
     hs-source-dirs:   examples
@@ -231,13 +245,9 @@ executable mcp-stdio
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
-        aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
-        containers >= 0.6 && < 0.7,
-        scientific >= 0.3 && < 0.4,
         time >= 1.12 && < 1.13,
         optparse-applicative >= 0.17 && < 0.19,
-        data-default >= 0.7 && < 0.8,
         plow-log ^>= 0.1.6
 
     -- Directories containing source files.
@@ -256,10 +266,33 @@ test-suite mcp-test
 
     -- Modules included in this executable, other than Main.
     other-modules:
+        Generators
+        TestMonad
+        Laws.AuthCodeFunctorSpec
+        Laws.ConsumeAuthCodeSpec
+        Laws.OAuthStateStoreSpec
+        Laws.OAuthUserTypeSpec
+        Laws.AuthBackendSpec
+        Laws.AuthBackendAssociatedTypesSpec
+        Laws.AuthBackendSignatureSpec
+        Laws.BoundarySpec
+        Laws.ErrorBoundarySecuritySpec
         Trace.FilterSpec
         Trace.GoldenSpec
         Trace.OAuthSpec
         Trace.RenderSpec
+        Functional.OAuthFlowSpec
+        MCP.Server.OAuth.Test.Fixtures
+        MCP.Server.OAuth.TypesSpec
+        MCP.Server.OAuth.BoundarySpec
+        MCP.Server.OAuth.AppSpec
+        MCP.Server.HTTP.McpAuthSpec
+        Security.SessionCookieSpec
+        Servant.OAuth2.IDP.APISpec
+        Servant.OAuth2.IDP.TokenRequestSpec
+        Servant.OAuth2.IDP.LucidRenderingSpec
+        Servant.OAuth2.IDP.TypesSpec
+        Servant.OAuth2.IDP.CryptoEntropySpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -279,4 +312,21 @@ test-suite mcp-test
         mcp,
         text >= 2.0 && <= 2.1.2,
         hspec >= 2.10 && < 2.12,
-        plow-log >= 0.1.6 && < 0.2
+        hspec-wai >= 0.11 && < 0.12,
+        plow-log >= 0.1.6 && < 0.2,
+        QuickCheck >= 2.14 && < 2.16,
+        time >= 1.12 && < 1.13,
+        containers >= 0.6 && < 0.7,
+        mtl >= 2.3 && < 2.4,
+        network-uri >= 2.6 && < 2.7,
+        memory >= 0.18 && < 0.19,
+        http-api-data >= 0.6 && < 0.7,
+        http-types >= 0.12 && < 0.13,
+        servant-server >= 0.19 && < 0.21,
+        servant-auth-server >= 0.4 && < 0.5,
+        stm >= 2.5 && < 2.6,
+        aeson >= 2.1 && < 2.3,
+        bytestring >= 0.11 && < 0.13,
+        async >= 2.2 && < 2.3,
+        wai-extra >= 3.1 && < 3.2,
+        lucid >= 2.11 && < 2.12
