chore(workspace): configure cabal.project for multi-package build
Update cabal.project to reference both the main mcp package and the
new vendor/servant-oauth2-idp package. Add stub cabal file and MIT
license to servant-oauth2-idp to enable cabal build all.

The stub package will be populated with actual modules during the
package extraction process.

--- a/cabal.project
+++ b/cabal.project
@@ -1,5 +1,6 @@
 index-state: 2024-07-18T00:00:00Z
-packages: mcp.cabal
+packages: .
+           vendor/servant-oauth2-idp
 tests: True
 documentation: False
 optimization: False
