--- a/mcp.cabal
+++ b/mcp.cabal
@@ -94,26 +94,6 @@ library
         MCP.Server.HTTP.AppEnv
         MCP.Server.Auth
         MCP.Server.Time
-        Servant.OAuth2.IDP.API
-        Servant.OAuth2.IDP.Config
-        Servant.OAuth2.IDP.Types
-        Servant.OAuth2.IDP.Metadata
-        Servant.OAuth2.IDP.PKCE
-        Servant.OAuth2.IDP.Store
-        Servant.OAuth2.IDP.Store.InMemory
-        Servant.OAuth2.IDP.Errors
-        Servant.OAuth2.IDP.Trace
-        Servant.OAuth2.IDP.Server
-        Servant.OAuth2.IDP.Handlers
-        Servant.OAuth2.IDP.Handlers.HTML
-        Servant.OAuth2.IDP.Handlers.Metadata
-        Servant.OAuth2.IDP.Handlers.Registration
-        Servant.OAuth2.IDP.Handlers.Authorization
-        Servant.OAuth2.IDP.Handlers.Login
-        Servant.OAuth2.IDP.Handlers.Token
-        Servant.OAuth2.IDP.Test.Internal
-        Servant.OAuth2.IDP.Auth.Backend
-        Servant.OAuth2.IDP.Auth.Demo
         MCP.Trace.Types
         MCP.Trace.HTTP
         MCP.Trace.Operation
@@ -130,6 +110,7 @@ library
     -- Other library packages from which modules are imported.
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
+        servant-oauth2-idp,
         aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
         containers >= 0.6 && < 0.7,
@@ -143,24 +124,18 @@ library
         servant >= 0.19 && < 0.21,
         http-types >= 0.12 && < 0.13,
         http-media >= 0.8 && < 0.9,
-        http-api-data >= 0.6 && < 0.7,
         servant-auth-server >= 0.4 && < 0.5,
         jose >= 0.10 && < 0.12,
         crypton >= 0.34 && < 2.0,
         memory >= 0.18 && < 0.19,
         base64-bytestring >= 1.2 && < 1.3,
         time >= 1.12 && < 1.13,
-        uuid >= 1.3 && < 1.4,
         data-default >= 0.7 && < 0.8,
         plow-log ^>= 0.1.6,
         generic-lens >= 2.2 && < 2.3,
         network-uri >= 2.6 && < 2.7,
         monad-time >= 0.4 && < 0.5,
-        hspec >= 2.10 && < 2.12,
-        hspec-wai >= 0.11 && < 0.12,
-        lucid >= 2.11 && < 2.12,
-        servant-lucid >= 0.9 && < 0.10,
-        QuickCheck >= 2.14 && < 2.16
+        lucid >= 2.11 && < 2.12
 
     -- Directories containing source files.
     hs-source-dirs:   src
@@ -214,6 +189,7 @@ executable mcp-http
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
+        servant-oauth2-idp,
         text >= 2.0 && <= 2.1.2,
         time >= 1.12 && < 1.13,
         optparse-applicative >= 0.17 && < 0.19,
@@ -269,15 +245,6 @@ test-suite mcp-test
     -- Modules included in this executable, other than Main.
     other-modules:
         TestMonad
-        Laws.AuthCodeFunctorSpec
-        Laws.ConsumeAuthCodeSpec
-        Laws.OAuthStateStoreSpec
-        Laws.OAuthUserTypeSpec
-        Laws.AuthBackendSpec
-        Laws.AuthBackendAssociatedTypesSpec
-        Laws.AuthBackendSignatureSpec
-        Laws.BoundarySpec
-        Laws.ErrorBoundarySecuritySpec
         Trace.FilterSpec
         Trace.GoldenSpec
         Trace.RenderSpec
@@ -290,19 +257,6 @@ test-suite mcp-test
         MCP.Server.HTTP.McpAuthSpec
         MCP.Server.AuthSpec
         Security.SessionCookieSpec
-        Servant.OAuth2.IDP.APISpec
-        Servant.OAuth2.IDP.BrandingSpec
-        Servant.OAuth2.IDP.ConfigSpec
-        Servant.OAuth2.IDP.TokenRequestSpec
-        Servant.OAuth2.IDP.LucidRenderingSpec
-        Servant.OAuth2.IDP.TypesSpec
-        Servant.OAuth2.IDP.CryptoEntropySpec
-        Servant.OAuth2.IDP.BearerMethodSpec
-        Servant.OAuth2.IDP.ErrorsSpec
-        Servant.OAuth2.IDP.Handlers.MetadataSpec
-        Servant.OAuth2.IDP.MetadataSpec
-        Servant.OAuth2.IDP.PKCESpec
-        Servant.OAuth2.IDP.TraceSpec
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -320,23 +274,19 @@ test-suite mcp-test
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
+        servant-oauth2-idp,
         text >= 2.0 && <= 2.1.2,
         hspec >= 2.10 && < 2.12,
         hspec-wai >= 0.11 && < 0.12,
         plow-log >= 0.1.6 && < 0.2,
-        QuickCheck >= 2.14 && < 2.16,
         time >= 1.12 && < 1.13,
         containers >= 0.6 && < 0.7,
         mtl >= 2.3 && < 2.4,
         network-uri >= 2.6 && < 2.7,
         memory >= 0.18 && < 0.19,
-        http-api-data >= 0.6 && < 0.7,
-        http-types >= 0.12 && < 0.13,
         servant-server >= 0.19 && < 0.21,
         servant-auth-server >= 0.4 && < 0.5,
         stm >= 2.5 && < 2.6,
         aeson >= 2.1 && < 2.3,
         bytestring >= 0.11 && < 0.13,
-        async >= 2.2 && < 2.3,
-        wai-extra >= 3.1 && < 3.2,
-        lucid >= 2.11 && < 2.12
+        wai-extra >= 3.1 && < 3.2
