--- a/mcp.cabal
+++ b/mcp.cabal
@@ -26,20 +26,20 @@ version:            0.3.0.0
 synopsis:           A Haskell implementation of the Model Context Protocol (MCP)
 
 -- A longer description of the package.
-description:        
+description:
     This library provides a complete implementation of the Model Context Protocol (MCP)
     for Haskell. MCP is a protocol that enables seamless communication between AI models
     and external tools, resources, and services. This implementation supports the latest
-    MCP protocol version (2025-06-18) with full compatibility for resources, tools, 
-    prompts, and all standard MCP message types. It provides both a server framework 
+    MCP protocol version (2025-06-18) with full compatibility for resources, tools,
+    prompts, and all standard MCP message types. It provides both a server framework
     and type definitions for building MCP-compliant applications.
-    
+
     Features dual transport support:
-    
+
     * StdIO transport for process-based clients (e.g., Claude Desktop)
     * HTTP transport following the official MCP specification for web-based integration,
       and supports OAuth authentication.
-        
+
     Both transports use the same MCPServer typeclass, allowing seamless switching between
     communication methods while maintaining identical server logic.
 
@@ -71,6 +71,12 @@ extra-source-files:
     examples/claude-desktop-config.json
     examples/full-config-example.json
 
+tested-with:        GHC == 9.6.7
+                     || == 9.8.4
+                     || == 9.10.3
+                     || == 9.12.2
+                     || == 9.14.1
+
 homepage:       https://github.com/Tritlo/mcp
 
 source-repository head
@@ -78,16 +84,16 @@ source-repository head
   location: https://github.com/Tritlo/mcp.git
 
 common warnings
-    ghc-options: -Wall
+    ghc-options: -Wall -Wunused-packages
 
 library
     -- Import common warning flags.
     import:           warnings
 
     -- Modules exported by the library.
-    exposed-modules:  
+    exposed-modules:
         MCP.Types
-        MCP.Protocol  
+        MCP.Protocol
         MCP.Server
         MCP.Server.StdIO
         MCP.Server.HTTP
@@ -100,24 +106,19 @@ library
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    
+    build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
         containers >= 0.6 && < 0.7,
         bytestring >= 0.11 && < 0.12,
-        unordered-containers >= 0.2 && < 0.3,
         stm >= 2.5 && < 2.6,
-        async >= 2.2 && < 2.3,
         mtl >= 2.3 && < 2.4,
-        transformers >= 0.6 && < 0.7,
         warp >= 3.3 && < 3.4,
         wai >= 3.2 && < 3.3,
         wai-extra >= 3.1 && < 3.2,
         servant-server >= 0.19 && < 0.21,
         servant >= 0.19 && < 0.21,
-        http-types >= 0.12 && < 0.13,
-        servant-auth >= 0.4 && < 0.5,
         servant-auth-server >= 0.4 && < 0.5,
         jose >= 0.10 && < 0.12,
         cryptonite >= 0.30 && < 0.31,
@@ -152,12 +153,8 @@ executable mcp
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
-        aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
-        containers >= 0.6 && < 0.7,
-        scientific >= 0.3 && < 0.4,
         time >= 1.12 && < 1.13,
-        data-default >= 0.7 && < 0.8
 
     -- Directories containing source files.
     hs-source-dirs:   app
@@ -183,13 +180,9 @@ executable mcp-http
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
-        aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
-        containers >= 0.6 && < 0.7,
-        scientific >= 0.3 && < 0.4,
         time >= 1.12 && < 1.13,
-        optparse-applicative >= 0.17 && < 0.19,
-        data-default >= 0.7 && < 0.8
+        optparse-applicative >= 0.17 && < 0.19
 
     -- Directories containing source files.
     hs-source-dirs:   examples
@@ -215,13 +208,9 @@ executable mcp-stdio
     build-depends:
         base >= 4.18.2.1 && <= 4.21.0.0,
         mcp,
-        aeson >= 2.1 && < 2.3,
         text >= 2.0 && <= 2.1.2,
-        containers >= 0.6 && < 0.7,
-        scientific >= 0.3 && < 0.4,
         time >= 1.12 && < 1.13,
         optparse-applicative >= 0.17 && < 0.19,
-        data-default >= 0.7 && < 0.8
 
     -- Directories containing source files.
     hs-source-dirs:   examples
