--- a/mcp.cabal
+++ b/mcp.cabal
@@ -107,9 +107,9 @@ library
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base >= 4.18.2.1 && <= 4.23.0.0,
+        base >= 4.18.2.1 && < 4.23,
         aeson >= 2.1 && < 2.3,
-        text >= 2.0 && <= 2.1.4,
+        text >= 2.0 && < 2.1.4,
         containers >= 0.6 && < 0.9,
         bytestring >= 0.11 && < 0.13,
         stm >= 2.5 && < 2.6,
@@ -151,9 +151,9 @@ executable mcp
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base >= 4.18.2.1 && <= 4.23.0.0,
+        base >= 4.18.2.1 && < 4.23,
         mcp,
-        text >= 2.0 && <= 2.1.4,
+        text >= 2.0 && < 2.1.4,
         time >= 1.12 && < 1.16,
 
     -- Directories containing source files.
@@ -178,9 +178,9 @@ executable mcp-http
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base >= 4.18.2.1 && <= 4.23.0.0,
+        base >= 4.18.2.1 && < 4.23,
         mcp,
-        text >= 2.0 && <= 2.1.4,
+        text >= 2.0 && < 2.1.4,
         time >= 1.12 && < 1.16,
         optparse-applicative >= 0.17 && < 0.20
 
@@ -206,9 +206,9 @@ executable mcp-stdio
 
     -- Other library packages from which modules are imported.
     build-depends:
-        base >= 4.18.2.1 && <= 4.23.0.0,
+        base >= 4.18.2.1 && < 4.23,
         mcp,
-        text >= 2.0 && <= 2.1.4,
+        text >= 2.0 && < 2.1.4,
         time >= 1.12 && < 1.16,
         optparse-applicative >= 0.17 && < 0.20,
 
@@ -243,5 +243,5 @@ test-suite mcp-test
 
     -- Test dependencies.
     build-depends:
-        base >= 4.18.2.1 && <= 4.23.0.0,
+        base >= 4.18.2.1 && < 4.23,
         mcp
