feat: extract MCP library into standalone package
Extract the MCP sub-library from engine-v2/dpella-server into its own
standalone package, following the oauth-server/jsonschema pattern.

- Add mcp.cabal with library and test-suite stanzas
- Add cabal.project with GHC 9.12.2 and oauth-server dependency
- Add AGENTS.md, README.md, CHANGELOG.md, Dockerfile, build.sh
- Add .github/workflows/docker-ci.yml and .gitignore
- Add scripts/release.sh and scripts/test-in-docker.sh
- Format all sources with fourmolu and cabal-gild
- All 19 integration tests pass

--- a/mcp.cabal
+++ b/mcp.cabal
@@ -1,106 +1,129 @@
-cabal-version:      2.2
-name:               mcp
-version:            0.1.0.0
-license:            MPL-2.0
-license-file:       LICENSE
-author:             DPella AB
-extra-doc-files:    CHANGELOG.md, README.md
-maintainer:         matti@dpella.io,
-                    lobo@dpella.io
-synopsis:           Model Context Protocol server implementation
+cabal-version: 2.2
+name: mcp
+version: 0.1.0.0
+license: MPL-2.0
+license-file: LICENSE
+author: DPella AB
+extra-doc-files:
+  CHANGELOG.md
+  README.md
+
+maintainer:
+  matti@dpella.io,
+  lobo@dpella.io
+
+synopsis: A Haskell implementation of the Model Context Protocol (MCP)
 description:
-  Provides a Servant-based implementation of the Model Context Protocol (MCP),
-  allowing AI assistants and other tools to interact with services through a
-  standardized JSON-RPC interface. The package supports resource access, tool
-  execution, prompt templates, and completion support, with JWT-based
-  authentication via @servant-auth-server@.
-homepage:          https://github.com/DPella/mcp
-bug-reports:       https://github.com/DPella/mcp/issues
-category:          Web, AI
+  This library provides a complete implementation of the Model Context Protocol
+  (MCP) for Haskell. MCP is a protocol that enables seamless communication
+  between AI models and external tools, resources, and services. This
+  implementation supports MCP protocol version 2025-06-18 with full
+  compatibility for resources, tools, prompts, completions, elicitation, and all
+  standard MCP message types. It provides both a server framework and type
+  definitions for building MCP-compliant applications.
+  .
+  The server is built on Servant with JWT authentication via
+  @servant-auth-server@ and uses HTTP transport with streaming SSE responses at
+  the @/mcp@ endpoint. An extensible handler framework (@ProcessHandlers@,
+  @ToolHandler@) allows implementing custom MCP servers with minimal
+  boilerplate.
+
+homepage: https://github.com/DPella/mcp
+bug-reports: https://github.com/DPella/mcp/issues
+category: Web, AI
 
 source-repository head
-  type:     git
+  type: git
   location: https://github.com/DPella/mcp.git
 
 library
   default-language:
     Haskell2010
+
   default-extensions:
-      DataKinds
-    , FlexibleInstances
-    , GADTs
-    , GeneralizedNewtypeDeriving
-    , ImportQualifiedPost
-    , LambdaCase
-    , OverloadedStrings
-    , PolyKinds
-    , RankNTypes
-    , TypeApplications
-    , TypeFamilies
+    DataKinds
+    FlexibleInstances
+    GADTs
+    GeneralizedNewtypeDeriving
+    ImportQualifiedPost
+    LambdaCase
+    OverloadedStrings
+    PolyKinds
+    RankNTypes
+    TypeApplications
+    TypeFamilies
+
   hs-source-dirs:
     src
+
   exposed-modules:
     MCP
     MCP.Protocol
     MCP.Types
+
   other-modules:
     MCP.Aeson
-  build-depends:
-      aeson
-    , base >=4.18 && <4.22
-    , bytestring
-    , containers
-    , http-media
-    , mtl
-    , servant
-    , servant-auth-server
-    , servant-server
-    , text
-    , time
 
+  build-depends:
+    aeson,
+    base >=4.18 && <4.22,
+    bytestring,
+    containers,
+    http-media,
+    mtl,
+    servant,
+    servant-auth-server,
+    servant-server,
+    text,
+    time,
 
 test-suite test-mcp
   type: exitcode-stdio-1.0
   default-language:
     Haskell2010
+
   default-extensions:
-      DataKinds
-    , FlexibleInstances
-    , GADTs
-    , GeneralizedNewtypeDeriving
-    , ImportQualifiedPost
-    , LambdaCase
-    , OverloadedStrings
-    , PolyKinds
-    , RankNTypes
-    , TypeApplications
+    DataKinds
+    FlexibleInstances
+    GADTs
+    GeneralizedNewtypeDeriving
+    ImportQualifiedPost
+    LambdaCase
+    OverloadedStrings
+    PolyKinds
+    RankNTypes
+    TypeApplications
+
   hs-source-dirs:
     test
+
   main-is:
     Main.hs
+
   other-modules:
     MCP.Integration
     MCP.TestServer
     MCP.TestUtils
+
   build-depends:
-      aeson
-    , attoparsec
-    , base >=4.18 && <4.22
-    , bytestring
-    , containers
-    , hspec
-    , hspec-wai
-    , http-types
-    , jose
-    , mcp
-    , mtl
-    , servant
-    , servant-auth-server
-    , servant-server
-    , tasty
-    , tasty-hunit
-    , text
-    , time
-    , wai
-    , wai-extra
-    , wai-test
+    aeson,
+    attoparsec,
+    base >=4.18 && <4.22,
+    bytestring,
+    containers,
+    hspec,
+    hspec-wai,
+    http-types,
+    jose,
+    mcp,
+    mtl,
+    servant,
+    servant-auth-server,
+    servant-server,
+    tasty,
+    tasty-hunit,
+    text,
+    time,
+    wai,
+    wai-extra,
+    wai-test,
