--- a/mcp.cabal
+++ b/mcp.cabal
@@ -3,7 +3,9 @@ name: mcp
 version: 0.1.0.0
 license: MPL-2.0
 license-file: LICENSE
+copyright: (c) 2025 DPella AB
 author: DPella AB
+tested-with: ghc ==9.12.2
 extra-doc-files:
   CHANGELOG.md
   README.md
@@ -65,17 +67,17 @@ library
     MCP.Aeson
 
   build-depends:
-    aeson,
+    aeson >=2.1 && <2.3,
     base >=4.18 && <4.22,
-    bytestring,
-    containers,
-    http-media,
-    mtl,
-    servant,
-    servant-auth-server,
-    servant-server,
-    text,
-    time,
+    bytestring >=0.11 && <0.13,
+    containers >=0.6 && <0.8,
+    http-media >=0.8 && <0.9,
+    mtl >=2.2 && <2.4,
+    servant >=0.19 && <0.21,
+    servant-auth-server >=0.4 && <0.5,
+    servant-server >=0.19 && <0.21,
+    text >=2.0 && <2.2,
+    time >=1.12 && <1.15,
 
 test-suite test-mcp
   type: exitcode-stdio-1.0
@@ -106,24 +108,22 @@ test-suite test-mcp
     MCP.TestUtils
 
   build-depends:
-    aeson,
-    attoparsec,
+    aeson >=2.1 && <2.3,
+    attoparsec >=0.14 && <0.15,
     base >=4.18 && <4.22,
-    bytestring,
-    containers,
-    hspec,
-    hspec-wai,
-    http-types,
-    jose,
+    bytestring >=0.11 && <0.13,
+    containers >=0.6 && <0.8,
+    hspec >=2.10 && <2.12,
+    hspec-wai >=0.11 && <0.12,
+    http-types >=0.12 && <0.13,
+    jose >=0.10 && <0.12,
     mcp,
-    mtl,
-    servant,
-    servant-auth-server,
-    servant-server,
-    tasty,
-    tasty-hunit,
-    text,
-    time,
-    wai,
-    wai-extra,
-    wai-test,
+    mtl >=2.2 && <2.4,
+    servant >=0.19 && <0.21,
+    servant-auth-server >=0.4 && <0.5,
+    servant-server >=0.19 && <0.21,
+    text >=2.0 && <2.2,
+    time >=1.12 && <1.15,
+    wai >=3.2 && <3.3,
+    wai-extra >=3.1 && <3.2,
+    wai-test >=3.0 && <3.1,
