--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,6 @@
-packages: mcp.cabal
+packages:
+  mcp-protocol/mcp-protocol.cabal
+  mcp-server/mcp-server.cabal
 
 -- oauth-server is not on hackage yet
 packages: ../oauth-server/*.cabal
