fix: rename mcp-server package back to mcp
The mcp-server name was taken on Hackage. Since this package was
originally called mcp, keep that name. The module is still MCP.Server
and the directory remains mcp-server/ to avoid confusion with the repo
root.

--- a/cabal.project
+++ b/cabal.project
@@ -1,6 +1,6 @@
 packages:
   mcp-protocol/mcp-protocol.cabal
-  mcp-server/mcp-server.cabal
+  mcp-server/mcp.cabal
 
 -- oauth-server is not on hackage yet
 packages: ../oauth-server/*.cabal
