--- a/mcp-server/mcp.cabal
+++ b/mcp-server/mcp.cabal
@@ -1,5 +1,5 @@
 cabal-version: 2.2
-name: mcp-server
+name: mcp
 version: 0.1.0.0
 license: MPL-2.0
 license-file: LICENSE
@@ -74,7 +74,7 @@ library
     text >=2.0 && <2.2,
     time >=1.12 && <1.15,
 
-test-suite test-mcp-server
+test-suite test-mcp
   type: exitcode-stdio-1.0
   default-language:
     Haskell2010
@@ -113,7 +113,7 @@ test-suite test-mcp-server
     http-types >=0.12 && <0.13,
     jose >=0.10 && <0.12,
     mcp-protocol,
-    mcp-server,
+    mcp,
     mtl >=2.2 && <2.4,
     servant >=0.19 && <0.21,
     servant-auth-server >=0.4 && <0.5,
