--- a/mcp-server/mcp.cabal
+++ b/mcp-server/mcp.cabal
@@ -66,7 +66,7 @@ library
     bytestring >=0.11 && <0.13,
     containers >=0.6 && <0.8,
     http-media >=0.8 && <0.9,
-    mcp-types,
+    mcp-types >=2025.6.18 && <2026,
     mtl >=2.2 && <2.4,
     servant >=0.19 && <0.21,
     servant-auth-server >=0.4 && <0.5,
@@ -112,7 +112,7 @@ test-suite test-mcp
     hspec-wai >=0.11 && <0.12,
     http-types >=0.12 && <0.13,
     jose >=0.10 && <0.12,
-    mcp-types,
+    mcp-types >=2025.6.18 && <2026,
     mcp,
     mtl >=2.2 && <2.4,
     servant >=0.19 && <0.21,
