--- a/mcp-types/mcp-types.cabal
+++ b/mcp-types/mcp-types.cabal
@@ -60,4 +60,5 @@ library
     aeson >=2.1 && <2.3,
     base >=4.18 && <4.22,
     containers >=0.6 && <0.8,
+    jsonrpc >=0.2.0 && <0.3,
     text >=2.0 && <2.2,
